--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+framework = arduino
+lib_deps = adafruit/Adafruit NeoPixel@^1.10.7
+
 [env:adafruit_feather_m4]
 platform = atmelsam
 board = adafruit_feather_m4
-framework = arduino
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.7
+
+[env:adafruit_qtpy_esp32]
+platform = espressif32
+board = adafruit_qtpy_esp32
+
