--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,10 @@
 
 [env]
 framework = arduino
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.7
+lib_deps =
+  adafruit/Adafruit NeoPixel@^1.10.7
+	ivanseidel/Gaussian@0.0.0-alpha+sha.e891a2a01f
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
 
 [env:adafruit_feather_m4]
 platform = atmelsam
@@ -20,3 +23,6 @@ board = adafruit_feather_m4
 platform = espressif32
 board = adafruit_qtpy_esp32
 
+[env:adafruit_qtpy_esp32s3_n4r2]
+platform = espressif32
+board = adafruit_qtpy_esp32s3_n4r2
